Table can print column contents with no rows
When there are no rows in the table, until now, Table would crash. It would
complain about not being able to allocate a zero-sized array. With this
commit, this has been fixed by adding checks on the number of rows when
reading FITS and plain text files.

This fixes bug #54298.

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,5 @@
 GNU Astronomy Utilities NEWS                          -*- outline -*-
 
-
 * Noteworthy changes in release X.X (library 5.0.0) (YYYY-MM-DD) [alpha]
 
 ** New features
@@ -41,6 +40,7 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
   bug #54285: make check fails if g++ not present.
   bug #54286: BuildProgram's configuration file, not built by default.
   bug #54297: No Match output when --notmatched called and no match.
+  bug #54298: Table not writing array when there are no rows.
 
 
 
