Check for the existence of CFITSIO's fits_is_reentrant
CFITSIO's `fits_is_reentrant' function is only available after version 3.30
(April 2012). So if the system has an older version, Gnuastro's build will
crash. A configuration check has been added in `configure.ac' to do the
check and not call the function if its not present.

Also, when multiple threads are called, but CFITSIO wasn't configured to be
run in multiple threads, Crop won't abort with an error, but the number of
threads will be set to 1.

Finally in `tests/mkprof/mosaic1.sh', we were running MakeProfiles
separately from the `mv' command. So even if MakeProfiles crashed, the test
would succeed, causing really hard to interpret situtations!!!

This bug was reported by Oryna Ivashtenko.

This fixes bug #54312.

--- a/NEWS
+++ b/NEWS
@@ -41,6 +41,7 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
   bug #54286: BuildProgram's configuration file, not built by default.
   bug #54297: No Match output when --notmatched called and no match.
   bug #54298: Table not writing array when there are no rows.
+  bug #54312: Crash when CFITSIO doesn't have fits_is_reentrant function.
 
 
 
