--- a/THANKS
+++ b/THANKS
@@ -34,6 +34,7 @@ support in Gnuastro. The list is ordered alphabetically (by family name).
     Takashi Ichikawa                     ichikawa@astr.tohoku.ac.jp
     Raúl Infante Sainz                   infantesainz@gmail.com
     Brandon Invergo                      brandon@gnu.org
+    Oryna Ivashtenko                     arinaivashtenko@gmail.com
     Aurélien Jarno                       aurelien.jarno@univ-lyon1.fr
     Geoffry Krouchi                      geoffrey.krouchi@etu.univ-lyon1.fr
     Lee Kelvin                           l.s.kelvin@ljmu.ac.uk
