Configure script has a new --enable-debug option
With this new option, the configure script will disable optimization and
enable debugging flags during the build. This is easier to remember (and
less buggy) than directly setting CFLAGS at configure time.

--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,9 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
 
 ** New features
 
+  Installation:
+    --enable-debug: enable debugging flags and disable optimization.
+
   Arithmetic:
     - `collapse-sum': collapse/remove a dimension by summing over it.
     - `collapse-mean': collapse/remove a dimension by averaging over it.
